// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://vk.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Vkontakte
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered active"
  href="https://vk.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Vkontakte
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://vk.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Vkontakte
</a>
`;
